Added daisy-chaining and explicit request sending through either a provided callback or by invoking #send

--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   ],
   "dependencies": {
     "request": "2.x",
-    "underscore": "1.x"
+    "underscore": "1.x",
+    "node-uuid": "1.x",
+    "async": "0.2.x"
+  },
+  "devDependencies": {
+    "should": "*",
+    "sinon": "*",
+    "mocha": "*"
   },
   "author": "Jörg Tillmann <mail@joergtillmann.com>",
   "license": "BSD"
