--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-analytics",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A node module for Google's Universal Analytics tracking",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,6 @@
     "sinon": "*",
     "mocha": "*"
   },
-  "author": "Jörg Tillmann <mail@joergtillmann.com>",
+  "author": "Jörg Tillmann <joerg@peaksandpies.com>",
   "license": "MIT"
 }
