--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
-  - 0.6
-  - 0.8
+  - "0.8"
   - "0.10"
+  - "0.12"
+  - "io.js"
 
-before_install: npm conf set strict-ssl false
+before_install:
+  - npm install -g npm
+  - npm conf set strict-ssl false
