--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
-  - "0.8"
-  - "0.10"
   - "0.12"
-  - "io.js"
+  - "4"
+  - "6"
+  - "8"
+  - "lts"
 
 before_install:
   - npm install -g npm
