--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A node module for Google's Universal Analytics tracking",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha ./test/event"
   },
   "repository": {
     "type": "git",
