--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "universal-analytics",
+  "name": "cross-ga",
   "version": "0.4.21",
-  "description": "A crossenv(browser, node) module for Google's Universal Analytics tracking",
+  "description": "A browser and node module for Google's Universal Analytics tracking",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./test/"
