feat: pin native-request version to 1.0.5

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "native-request": "^1.0.5",
+    "native-request": "1.0.5",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
