--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-analytics",
-  "version": "0.4.22",
+  "version": "0.5.0",
   "description": "A node module for Google's Universal Analytics tracking",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,6 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "native-request": "1.0.5",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
@@ -27,5 +26,8 @@
     "mocha": "^7.1.2"
   },
   "author": "Jörg Tillmann <joerg@peaksandpies.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=12.18.2"
+  }
 }
