--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "native-request": "1.0.5",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "should": "^13.2.3",
-    "sinon": "^9.0.2",
-    "mocha": "^7.1.2"
+    "should": "*",
+    "sinon": "^1.17.7",
+    "mocha": "*"
   },
   "author": "Jörg Tillmann <joerg@peaksandpies.com>",
   "license": "MIT"
