--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "tracking"
   ],
   "dependencies": {
-    "debug": "^4.1.1",
+    "debug": "^4.3.1",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
+    "mocha": "*",
     "should": "*",
-    "sinon": "^1.17.7",
-    "mocha": "*"
+    "sinon": "^1.17.7"
   },
   "author": "Jörg Tillmann <joerg@peaksandpies.com>",
   "license": "MIT",
